[gd_scene load_steps=3 format=3 uid="uid://of1ulwxj1t5x"]

[ext_resource type="Script" path="res://scenes/actorsss/nav_actor.gd" id="1_5tu0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6aqxw"]

[node name="NavActor" type="CharacterBody2D"]
script = ExtResource("1_5tu0o")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6aqxw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Pather" type="Timer" parent="."]
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Pather" to="." method="_on_pather_timeout"]
